kubernetes/components/network-policies/network-deny-all.yaml
# Default deny all ingress traffic in this namespace

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  labels:
    app.kubernetes.io/component: network-policy
spec:
  podSelector: {}  # Applies to all pods
  policyTypes:
    - Ingress
